--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     // Servicio de consulta de suministros
     class SuministrosService {
         static async consultarSuministro(codigo) {
-            const url = 'http://170.231.83.91/consultaweb/';
+            const url = 'https://170.231.83.91/consultaweb/';
             const datos = {
                 codigo: codigo,
                 'btn-login': 'Consultar'
